@@ -120,7 +120,7 @@
   <build>
       <plugins>
 
-          <!-- 🧠 OpenAPI Generator Plugin -->
+          <!-- OpenAPI Generator Plugin -->
           <plugin>
               <groupId>org.openapitools</groupId>
               <artifactId>openapi-generator-maven-plugin</artifactId>
@@ -173,13 +173,21 @@
           </plugin>
 
 		  <!-- Spring Boot Maven plugin: explicitly set mainClass to avoid ambiguous main-class detection -->
-		  <plugin>
-			  <groupId>org.springframework.boot</groupId>
-			  <artifactId>spring-boot-maven-plugin</artifactId>
-			  <configuration>
-				  <mainClass>com.rfidback.RfidBackApplication</mainClass>
-			  </configuration>
-		  </plugin>
+          <plugin>
+              <groupId>org.springframework.boot</groupId>
+              <artifactId>spring-boot-maven-plugin</artifactId>
+              <configuration>
+                  <mainClass>com.rfidback.RfidBackApplication</mainClass>
+              </configuration>
+          </plugin>
+          <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-surefire-plugin</artifactId>
+              <version>3.5.4</version>
+              <configuration>
+                  <argLine>-Djdk.attach.allowAttachSelf=true</argLine>
+              </configuration>
+          </plugin>
 
       </plugins>
 
